--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <h1>SALENA KETPUEAK</h1>
       <div class="role">Data Solutions Consultant · Melbourne, Victoria, Australia</div>
       <p class="summary">
-        Salena Ketpueak is a Data Solutions Engineer passionate about designing secure, scalable data platforms for financial services. With expertise in Databricks, multi-cloud infrastructure, and control frameworks, she bridges technical and business domains to deliver production-grade systems that drive strategic outcomes.
+        Salena Ketpueak is a Data Solutions Consultant passionate about designing secure, scalable data platforms for financial services. With expertise in Databricks, multi-cloud infrastructure, and control frameworks, she bridges technical and business domains to deliver production-grade systems that drive strategic outcomes.
       </p>
       <div class="links">
         <a href="mailto:salena.ketpueak@gmail.com"><i class="fas fa-envelope"></i> Email</a>
