--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
   <div class="job">
     <h3>LONDON STOCK EXCHANGE GROUP (LSEG)</h3>
-    <small>Senior Software Engineer — Bangkok, Jun 2019 – Jun 2021</small>
+    <small>Senior Software Engineer — Thailand, Jun 2019 – Jun 2021</small>
     <p>
       Delivered scalable central systems for FX Conversational Dealing, supporting global trading desks across financial institutional clients.
     </p>
