--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
   <section class="hero">
     <div class="container hero-content no-padding">
-      <img src="https://github.com/salenakerrs/cv/blob/master/salena-headshot.png?raw=true" alt="Salena Ketpueak" class="headshot" />
+      <img src="salena-headshot.png" alt="Salena Ketpueak" class="headshot" />
       <div class="hero-text">
         <h1>SALENA KETPUEAK</h1>
         <div class="role">Data Solutions Consultant · Melbourne, Victoria, Australia</div>
@@ -250,7 +250,7 @@
       <span class="tag">ETL</span>
       <span class="tag">DevOps</span>
       <span class="tag">Cloud</span>
-      <span class="tag">Consulting</span>
+      <span class="tag">Technology Consulting</span>
     </div>
 
     <h2 class="section-title">Professional Experience</h2>
@@ -305,7 +305,18 @@
 
     <h2 class="section-title">Certifications</h2>
     <hr>
-    <p>Databricks Data Engineer Professional</p>
+    <a href="https://credentials.databricks.com/391d052e-3051-49df-9b79-48282351c6ef#acc.xL8Rwzp3" target="_blank">
+        Databricks Certified Data Engineer Professional
+      </a>
+    <a href="https://www.credly.com/badges/e9bc67bc-858e-4f85-9f8f-337eec5c0a00" target="_blank">
+        Microsoft Certified Azure Fundamentals
+      </a>
+    <a href="https://bcert.me/bc/html/show-badge.html?b=xwbgotli" target="_blank">
+        Accenture Data Architect
+      </a>
+    <a href="https://www.credly.com/badges/d003605e-6f19-43d2-b1e6-1f0bf367a90a" target="_blank">
+        Professional Scrum Master I (PSM I)
+      </a>
 
     <h2 class="section-title">Publications</h2>
     <hr>
