--- a/index.html
+++ b/index.html
@@ -167,6 +167,17 @@
       text-decoration: underline;
     }
 
+    .certification a {
+      display: block;
+      color: var(--mck-blue);
+      text-decoration: none;
+      margin-bottom: 8px;
+    }
+
+    .certification a:hover {
+      text-decoration: underline;
+    }
+
     @media (max-width: 768px) {
       .hero-content {
         flex-direction: column;
@@ -305,18 +316,20 @@
 
     <h2 class="section-title">Certifications</h2>
     <hr>
-    <a href="https://credentials.databricks.com/391d052e-3051-49df-9b79-48282351c6ef#acc.xL8Rwzp3" target="_blank">
-        Databricks Certified Data Engineer Professional
-      </a>
-    <a href="https://www.credly.com/badges/e9bc67bc-858e-4f85-9f8f-337eec5c0a00" target="_blank">
-        Microsoft Certified Azure Fundamentals
-      </a>
-    <a href="https://bcert.me/bc/html/show-badge.html?b=xwbgotli" target="_blank">
-        Accenture Data Architect
-      </a>
-    <a href="https://www.credly.com/badges/d003605e-6f19-43d2-b1e6-1f0bf367a90a" target="_blank">
-        Professional Scrum Master I (PSM I)
-      </a>
+    <div class="certification">
+      <a href="https://credentials.databricks.com/391d052e-3051-49df-9b79-48282351c6ef#acc.xL8Rwzp3" target="_blank">
+          Databricks Certified Data Engineer Professional
+        </a>
+      <a href="https://www.credly.com/badges/e9bc67bc-858e-4f85-9f8f-337eec5c0a00" target="_blank">
+          Microsoft Certified Azure Fundamentals
+        </a>
+      <a href="https://bcert.me/bc/html/show-badge.html?b=xwbgotli" target="_blank">
+          Accenture Data Architect
+        </a>
+      <a href="https://www.credly.com/badges/d003605e-6f19-43d2-b1e6-1f0bf367a90a" target="_blank">
+          Professional Scrum Master I (PSM I)
+        </a>
+    </div>
 
     <h2 class="section-title">Publications</h2>
     <hr>
