--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="site.webmanifest">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-TSDS9W9Z9E"></script>
@@ -246,7 +246,7 @@
 
   <section class="hero">
     <div class="container hero-content no-padding">
-      <img src="/images/salena-headshot.png" alt="Salena Ketpueak" class="headshot" />
+      <img src="images/salena-headshot.png" alt="Salena Ketpueak" class="headshot" />
       <div class="hero-text">
         <h1>SALENA KETPUEAK</h1>
         <div class="role">Data Solutions Consultant · Melbourne, Victoria, Australia</div>
