--- a/index.html
+++ b/index.html
@@ -191,6 +191,17 @@
       text-decoration: underline;
     }
 
+    .project a {
+      display: block;
+      color: var(--mck-blue);
+      text-decoration: none;
+      margin-bottom: 8px;
+    }
+
+    .project a:hover {
+      text-decoration: underline;
+    }
+
     @media (max-width: 768px) {
       .hero-content {
         flex-direction: column;
@@ -325,6 +336,26 @@
         <span class="tag">DevOps</span>
         <span class="tag">Scrum</span>
       </div>
+    </div>
+
+    <h2 class="section-title">Projects</h2>
+    <hr>
+    <div class="project">
+      <p>
+        Banking - Wealth Analytics Services
+      </p>
+      <p>
+        Banking - Modernised Data Foundation
+      </p>
+      <p>
+        Banking - Cloud Data Integration
+      </p>
+      <p>
+        Banking - Mobile Banking Technical Improvement
+      </p>
+      <p>
+        Banking - Mutual Fund Open Architecture
+      </p>
     </div>
 
     <h2 class="section-title">Certifications</h2>
