--- a/index.html
+++ b/index.html
@@ -338,26 +338,6 @@
       </div>
     </div>
 
-    <h2 class="section-title">Projects</h2>
-    <hr>
-    <div class="project">
-      <p>
-        Banking - Wealth Analytics Services
-      </p>
-      <p>
-        Banking - Modernised Data Foundation
-      </p>
-      <p>
-        Banking - Cloud Data Integration
-      </p>
-      <p>
-        Banking - Mobile Banking Technical Improvement
-      </p>
-      <p>
-        Banking - Mutual Fund Open Architecture
-      </p>
-    </div>
-
     <h2 class="section-title">Certifications</h2>
     <hr>
     <div class="certification">
@@ -373,6 +353,26 @@
       <a href="https://www.credly.com/badges/d003605e-6f19-43d2-b1e6-1f0bf367a90a" target="_blank">
           Professional Scrum Master I (PSM I)
         </a>
+    </div>
+
+    <h2 class="section-title">Projects</h2>
+    <hr>
+    <div class="project">
+      <p>
+        Banking — Wealth Analytics Services
+      </p>
+      <p>
+        Banking — Modernised Data Foundation
+      </p>
+      <p>
+        Banking — Cloud Data Integration
+      </p>
+      <p>
+        Banking — Mobile Banking Technical Improvement
+      </p>
+      <p>
+        Banking — Mutual Fund Open Architecture
+      </p>
     </div>
 
     <h2 class="section-title">Publications</h2>
