--- a/index.html
+++ b/index.html
@@ -338,6 +338,17 @@
       </div>
     </div>
 
+    <h2 class="section-title">Education</h2>
+    <hr>
+    <div class="education">
+      <p>
+        Master of Information Technology (Artificial Intelligence) — University of Melbourne, Australia
+      </p>
+      <p>
+        Master of Business Analytics & AI Strategy — RMIT University, Australia
+      </p>
+    </div>
+
     <h2 class="section-title">Certifications</h2>
     <hr>
     <div class="certification">
