--- a/index.html
+++ b/index.html
@@ -359,19 +359,19 @@
     <hr>
     <div class="project">
       <p>
-        Banking — Wealth Analytics Services
+        2025 — Banking — Wealth Analytics Services
       </p>
       <p>
-        Banking — Modernised Data Foundation
+        2024 — Banking — Modernised Data Foundation
       </p>
       <p>
-        Banking — Cloud Data Integration
+        2023 — Banking — Cloud Data Integration
       </p>
       <p>
-        Banking — Mobile Banking Technical Improvement
+        2022 — Banking — Mobile Banking Technical Improvement
       </p>
       <p>
-        Banking — Mutual Fund Open Architecture
+        2021 — Banking — Mutual Fund Open Architecture
       </p>
     </div>
 
