--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
     <div class="job">
       <h3>ACCENTURE</h3>
-      <small>Data Engineering, Management & Governance Specialist — Thailand (Remote), Jun 2021 – Present</small>
+      <small>Consultant — Thailand (Remote), Jun 2021 – Present</small>
       <p>
         Led and contributed to multiple cloud data initiatives for leading financial institutions, including the <strong>Wealth Analytics Services</strong>, <strong>Modernised Data Foundation</strong>, <strong>Cloud Data Integration</strong>, and <strong>Mobile Banking Applications</strong> programs. 
         Designed secure and scalable data architectures across Azure and AWS, delivered production-grade <strong>ETL Frameworks</strong> using Databricks and PySpark, and implemented <strong>Data Access Control</strong> with Unity Catalog and role-based data security. 
